--- a/iafas/pom.xml
+++ b/iafas/pom.xml
@@ -51,7 +51,7 @@
 			<artifactId>mybatis</artifactId>
 			<version>3.0.5</version>
 		</dependency>
-		
+
 		<!-- INICIO JSF -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -122,7 +122,16 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.12.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
