--- a/iafas/.gitignore
+++ b/iafas/.gitignore
@@ -16,3 +16,14 @@ target
 tmp/
 tmp/**/*
 bin
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+.target
+#####################
