--- a/iafas/src/main/webapp/WEB-INF/web.xml
+++ b/iafas/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
    
   <context-param>
   	<param-name>primefaces.THEME</param-name>
-	<param-value>custom-theme</param-value>
+	<param-value>south-street</param-value>
   </context-param>
   
   <context-param>
